refactor search api
